[tool.poetry]
name = "wasirunner"
version = "0.1.0"
description = ""
authors = ["V <veronika.m.winters@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
wasmer = "^1.1.0"
wasmer-compiler-cranelift = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
