[tool.pdm.build]
includes = []
[project]
name = "wasirunner"
version = "0.1.0"
description = ""
authors = [
    {name = "V", email = "veronika.m.winters@gmail.com"},
]
dependencies = [
    "wasmer<2.0.0,>=1.1.0",
    "wasmer-compiler-cranelift<2.0.0,>=1.1.0",
]
requires-python = ">=3.9,<3.11"
readme = "README.md"
license = {text = "MIT"}



[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
